# tailord

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  POSITIONING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: architect.md  code-reviewer.md  librarian.md
.claude/rules/: .agentsync-manifest
.claude/skills/cover-letter-writing/: SKILL.md
.claude/skills/resume-bullet-writing/: SKILL.md
.claude/skills/resume-evidence-review/: SKILL.md
.claude/skills/resume-importing/: SKILL.md
.claude/skills/resume-job-fit-evaluator/: SKILL.md
.claude/skills/resume-tailoring/: SKILL.md
.codex/: config.toml
.codex/agents/: .agentsync-manifest  architect.toml
.codex/skills/cover-letter-writing/: SKILL.md
.codex/skills/resume-bullet-writing/: SKILL.md
.codex/skills/resume-evidence-review/: SKILL.md
.codex/skills/resume-importing/: SKILL.md
.codex/skills/resume-job-fit-evaluator/: SKILL.md
.codex/skills/resume-tailoring/: SKILL.md
.github/workflows/: ci.yml
.opencode/agents/: .agentsync-manifest  code-reviewer.md  engineer.md  librarian.md
.opencode/skills/cover-letter-writing/: SKILL.md
.opencode/skills/resume-bullet-writing/: SKILL.md
.opencode/skills/resume-evidence-review/: SKILL.md
.opencode/skills/resume-importing/: SKILL.md
.opencode/skills/resume-job-fit-evaluator/: SKILL.md
.opencode/skills/resume-tailoring/: SKILL.md
agents/: AGENTS.md  README.md  agentsync.conf
agents/claude/agents/: engineer.md
agents/claude/rules/: no-commit-attribution.md  plan-before-code.md
agents/codex/agents/: code-reviewer.toml  engineer.toml  (+1 more)
agents/scripts/: _lib.sh  apply_gitignore.sh  sync_agents.sh  sync_claude.sh  sync_codex.sh  sync_github.sh  sync_opencode.sh
docs/: chrome-web-store.md  model-runners.md  privacy.md  quickstart.md  skills.md  vault-anatomy.md
docs/advanced/: extension.md
src/tailord/: bridge_runtime.py  build.py  cli.py  config.py  cover_letter.py  events.py  lint_bullets.py  paths.py  pricing.py  render.py  runners.py  schema.py  stats.py  sync_skills.py  validate.py
tests/: test_bridge_packaging.py  test_bridge_runtime.py
tests/fixtures/: sample-resume.txt
tools/jd-bridge/: .env.example  package-lock.json  package.json
tools/jd-extension/: manifest.json  package.json
(+52 files in other folders)
