[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tailord"
version = "0.1.0"
description = "Local, evidence-backed job-application workbench. YAML resume + cover-letter rendering, JD scoring, agent skills."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sarthak Gaur" }]
dependencies = [
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "markupsafe>=2.1",
  "jsonschema>=4.0",
  "pypdf>=4.0,<6",
]

[project.optional-dependencies]
pdf = ["playwright>=1.45"]
api = ["anthropic>=0.40"]
dev = ["ruff>=0.5"]

[project.scripts]
tailord = "tailord.cli:main"
# Legacy subcommand entry points — convenient one-shots; `tailord` is the
# documented public surface from v0.1.0 onward.
resume-render   = "tailord.render:main"
resume-build    = "tailord.build:main"
resume-cover    = "tailord.cover_letter:main"
resume-validate = "tailord.validate:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Ship every non-Python framework file inside the wheel. Without this, the
# CLI's data lookups (FRAMEWORK_ROOT / "templates", / "schemas", / "skills",
# / "examples") all fail on a pipx install — only the .py modules would be
# present in site-packages/tailord/.
[tool.setuptools.package-data]
tailord = [
  "templates/**/*",
  "schemas/**/*",
  "skills/**/*",
  "examples/**/*",
  "examples/**/.gitkeep",
]

[tool.setuptools.data-files]
"share/tailord/jd-bridge" = [
  "tools/jd-bridge/.env.example",
  "tools/jd-bridge/package.json",
  "tools/jd-bridge/package-lock.json",
]
"share/tailord/jd-bridge/config" = [
  "tools/jd-bridge/config/prompt.yaml",
]
"share/tailord/jd-bridge/src" = [
  "tools/jd-bridge/src/config.js",
  "tools/jd-bridge/src/db.js",
  "tools/jd-bridge/src/events.js",
  "tools/jd-bridge/src/pdf-paths.js",
  "tools/jd-bridge/src/pricing.js",
  "tools/jd-bridge/src/queue.js",
  "tools/jd-bridge/src/routes.js",
  "tools/jd-bridge/src/security.js",
  "tools/jd-bridge/src/server.js",
  "tools/jd-bridge/src/worker.js",
]

[tool.ruff]
line-length = 110
target-version = "py311"
